# SlotBot

./: .gitignore  README.md  docs.md  requirements.txt  test_calendar_access.py  test_crew.py
.claude/: settings.local.json
api/: README.md  dependencies.py  main.py  schemas.py
api/routes/: chat.py  health.py
docs/: crewai-to-langgraph-migration-plan.md
frontend/: .env.example  README.md  index.html
frontend/src/pages/: Index.tsx
outputs/: missing_information_questions.json  parsed_user_input.json  session_state.json
slotbot/: pyproject.toml
slotbot/src/slotbot/: crew.py  main.py
slotbot/src/slotbot/config/: agents.yaml  tasks.yaml
src/slotbot/: README.md  crew.py  main.py  models.py
src/slotbot/config/: agents.yaml  tasks.yaml
src/slotbot/google_api/: Oauth_client.py  README.md
src/slotbot/tools/: README.md  calendar_tool.py  calendar_tools.py
