[project]
name = "slotbot"
version = "0.1.0"
description = "slotbot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
slotbot = "slotbot.main:run"
run_crew = "slotbot.main:run"
train = "slotbot.main:train"
replay = "slotbot.main:replay"
test = "slotbot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
